# sqlalchemy-crash-course

./: pyproject.toml
scripts/: recreate_db.py
sqla/: engine.py  models.py
sqla/lessons/: 00._query.py  01_engine.py  02_pooling.py  03_result.py  04_model.py  05_query.py
